sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:5: error: not found: value e
  e = true
  ^AlgCombSort:6: error: not found: value e
  while ((ecart>1) || e )
                      ^AlgCombSort:7: error: not found: value e
      {e = false
       ^AlgCombSort:9: error: not found: value i
       i=0
       ^AlgCombSort:10: error: not found: value i
      while (i+ecart< n)
             ^AlgCombSort:11: error: not found: value i
          {if (plusPetit(i+ecart,i))
                         ^AlgCombSort:11: error: not found: value i
          {if (plusPetit(i+ecart,i))
                                 ^AlgCombSort:12: error: not found: value e
              {e=true ;echange(i, i+ecart) ;};
               ^AlgCombSort:12: error: not found: value i
              {e=true ;echange(i, i+ecart) ;};
                               ^AlgCombSort:12: error: not found: value i
              {e=true ;echange(i, i+ecart) ;};
                                  ^AlgCombSort:13: error: not found: value i
          i+=1}
          ^