sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var n = getNombreValeurs
  var ecart = getNombreValeurs
  e = true
  while ((ecart>1) || e )
      {e = false
      ecart = (ecart.toDouble / 1.3).toInt
       i=0
      while (i+ecart< n)
          {if (plusPetit(i+ecart,i))
              {e=true ;echange(i, i+ecart) ;};
          i+=1}
       
     
       
      }
  
       ;}
